[tool.poetry]
name = "rotating_proxies"
version = "0.1.0"
description = ""
authors = ["author <author@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
flake8 = "^3.7.9"
isort = "^4.3.21"
pytest = "^5.3.5"
mypy = "^0.961"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
ruff = "0.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
norecursedirs = [
    ".venv",
    "__pycache__"
]
python_files = [
    "test_*.py"
]
python_functions = [
    "test_*"
]

[tool.coverage.run]
omit = [
    ".venv/*", 
    "tests/*"
]

[tool.mypy]
python_version = "3.11"
plugins = [
    "pydantic.mypy"
]
allow_untyped_globals = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = false

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist"
]
# Same as Black.
line-length = 120

[tool.ruff.lint]
fixable = ["I001", "F401", "W291", "W292"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"poetry.lock" = ["E501"]